// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser for loops accepts a 'step' clause 1`] = `
[
  For {
    "body": Block {
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "file": undefined,
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "statements": [],
    },
    "counterDeclaration": Assignment {
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "i",
      },
      "tokens": {
        "equals": {
          "isReserved": false,
          "kind": "Equal",
          "literal": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "text": "=",
        },
      },
      "value": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 0,
        },
      },
    },
    "finalValue": Literal {
      "_location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "value": Int32 {
        "inArray": false,
        "kind": 4,
        "value": 5,
      },
    },
    "increment": Literal {
      "_location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "value": Int32 {
        "inArray": false,
        "kind": 4,
        "value": 2,
      },
    },
    "tokens": {
      "endFor": {
        "isReserved": false,
        "kind": "EndFor",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end for",
      },
      "for": {
        "isReserved": true,
        "kind": "For",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "for",
      },
      "step": {
        "isReserved": true,
        "kind": "Step",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "step",
      },
      "to": {
        "isReserved": true,
        "kind": "To",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "to",
      },
    },
  },
]
`;

exports[`parser for loops allows 'next' to terminate loop 1`] = `
[
  For {
    "body": Block {
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "file": undefined,
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "statements": [],
    },
    "counterDeclaration": Assignment {
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "i",
      },
      "tokens": {
        "equals": {
          "isReserved": false,
          "kind": "Equal",
          "literal": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "text": "=",
        },
      },
      "value": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 0,
        },
      },
    },
    "finalValue": Literal {
      "_location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "value": Int32 {
        "inArray": false,
        "kind": 4,
        "value": 5,
      },
    },
    "increment": Literal {
      "_location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "value": Int32 {
        "inArray": false,
        "kind": 4,
        "value": 1,
      },
    },
    "tokens": {
      "endFor": {
        "isReserved": true,
        "kind": "Next",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "next",
      },
      "for": {
        "isReserved": true,
        "kind": "For",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "for",
      },
      "step": undefined,
      "to": {
        "isReserved": true,
        "kind": "To",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "to",
      },
    },
  },
]
`;

exports[`parser for loops defaults a missing 'step' clause to '1' 1`] = `
[
  For {
    "body": Block {
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "file": undefined,
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "statements": [],
    },
    "counterDeclaration": Assignment {
      "name": {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "i",
      },
      "tokens": {
        "equals": {
          "isReserved": false,
          "kind": "Equal",
          "literal": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "text": "=",
        },
      },
      "value": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 0,
        },
      },
    },
    "finalValue": Literal {
      "_location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "value": Int32 {
        "inArray": false,
        "kind": 4,
        "value": 5,
      },
    },
    "increment": Literal {
      "_location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "value": Int32 {
        "inArray": false,
        "kind": 4,
        "value": 1,
      },
    },
    "tokens": {
      "endFor": {
        "isReserved": false,
        "kind": "EndFor",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end for",
      },
      "for": {
        "isReserved": true,
        "kind": "For",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "for",
      },
      "step": undefined,
      "to": {
        "isReserved": true,
        "kind": "To",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "to",
      },
    },
  },
]
`;
